# guanaco-trade

./: .gitignore  LICENSE.txt  README.md  example.py  pyproject.toml
src/: clock.py  configuration.py  data.py  guanaco.py
src/commands/: predict.txt  summarize.txt
